--- a/app/src/main/res/layout/item_shopping_active.xml
+++ b/app/src/main/res/layout/item_shopping_active.xml
@@ -1,43 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/top"
-    android:layout_marginStart="@dimen/start"
-    android:layout_marginEnd="@dimen/end"
-    android:layout_marginBottom="@dimen/bottom"
-    app:cardCornerRadius="@dimen/radius"
-    app:cardElevation="@dimen/elevation_active"
-    app:cardUseCompatPadding="true">
 
-    <LinearLayout
+<layout>
+
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/teal_500"
-        android:orientation="horizontal"
-        android:padding="@dimen/padding">
+        android:layout_marginStart="@dimen/start"
+        android:layout_marginTop="@dimen/top"
+        android:layout_marginEnd="@dimen/end"
+        android:layout_marginBottom="@dimen/bottom"
+        app:cardCornerRadius="@dimen/radius"
+        app:cardElevation="@dimen/elevation_active"
+        app:cardUseCompatPadding="true">
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            tools:text="Орехи"/>
+            android:background="@color/teal_500"
+            android:orientation="horizontal"
+            android:padding="@dimen/padding">
 
-        <TextView
-            android:id="@+id/tv_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            tools:text="1"/>
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:text="Орехи" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:text="1" />
 
-</androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+</layout>
