--- a/app/src/main/res/layout/item_shopping_inactive.xml
+++ b/app/src/main/res/layout/item_shopping_inactive.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout>
+    
+    <data>
+        <variable
+            name="itemShopping"
+            type="com.egorpoprotskiy.shoppinglist.domain.ListShopping" />
+    </data>
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -27,6 +33,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:text="@{itemShopping.name}"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -36,6 +43,7 @@
                 android:id="@+id/tv_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@{String.valueOf(itemShopping.count)}"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
